Initial WebToken Confinguration

--- a/StackOverflow.Solution.API/appsettings.json
+++ b/StackOverflow.Solution.API/appsettings.json
@@ -8,5 +8,6 @@
   "ConnectionStrings": {
     "Default": "Data Source=HAVISHWARAN-UNV; User ID=sa;Password=12345678; Initial Catalog=StackOverflow;Integrated Security=False;Trust Server Certificate=true"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "LoginApiTokenKey": "drUNFZEpjBXiNHcDYdjXoYi"
 }
