--- a/StackOverflow.Solution.API/StackOverflow.Solution.API.csproj
+++ b/StackOverflow.Solution.API/StackOverflow.Solution.API.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
@@ -17,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\StackOverflow.Solution.Authenticate\StackOverflow.Solution.Authenticate.csproj" />
     <ProjectReference Include="..\StackOverflow.Solution.Data\StackOverflow.Solution.Data.csproj" />
   </ItemGroup>
 
