Add JWT token Authentication using Custom Middlware

--- a/StackOverflow.Solution.API/appsettings.json
+++ b/StackOverflow.Solution.API/appsettings.json
@@ -9,5 +9,8 @@
     "Default": "Data Source=HAVISHWARAN-UNV; User ID=sa;Password=12345678; Initial Catalog=StackOverflow;Integrated Security=False;Trust Server Certificate=true"
   },
   "AllowedHosts": "*",
-  "LoginApiTokenKey": "drUNFZEpjBXiNHcDYdjXoYi"
+  "LoginApiTokenKey": "drUNFZEpjBXiNHcDYdjXoYi",
+  "WebKey": "9930D898BC76479A8DA7121DC3EF8599",
+  "EncryptionKey": "gVkYp3s6v9y$B&E)H@McQfTjWmZq4t7w",
+  "VectorKey": "P7Q8SATBUD"
 }
