--- a/StackOverflow.Solution.API/StackOverflow.Solution.API.csproj
+++ b/StackOverflow.Solution.API/StackOverflow.Solution.API.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNet.WebApi.Core" Version="5.2.9" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.13" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.1">
       <PrivateAssets>all</PrivateAssets>
@@ -19,6 +20,7 @@
   <ItemGroup>
     <ProjectReference Include="..\StackOverflow.Solution.Authenticate\StackOverflow.Solution.Authenticate.csproj" />
     <ProjectReference Include="..\StackOverflow.Solution.Data\StackOverflow.Solution.Data.csproj" />
+    <ProjectReference Include="..\StackOverflow.Solution.DTO\StackOverflow.Solution.DTO.csproj" />
   </ItemGroup>
 
 </Project>
