--- a/StackOverflow.Solution.DTO/StackOverflow.Solution.DTO.csproj
+++ b/StackOverflow.Solution.DTO/StackOverflow.Solution.DTO.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\StackOverflow.Solution.Services\StackOverflow.Solution.Services.csproj" />
+  </ItemGroup>
+
 </Project>
