--- a/StackOverflow.Solution.Authenticate/StackOverflow.Solution.Authenticate.csproj
+++ b/StackOverflow.Solution.Authenticate/StackOverflow.Solution.Authenticate.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\StackOverflow.Solution.Helper\StackOverflow.Solution.Helper.csproj" />
+  </ItemGroup>
+
 </Project>
