--- a/StackOverflow.Solution.Helper/StackOverflow.Solution.Helper.csproj
+++ b/StackOverflow.Solution.Helper/StackOverflow.Solution.Helper.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
+    <ProjectReference Include="..\StackOverflow.Solution.DTO\StackOverflow.Solution.DTO.csproj" />
   </ItemGroup>
 
 </Project>
