--- a/StackOverflow.Solution.API/appsettings.json
+++ b/StackOverflow.Solution.API/appsettings.json
@@ -9,13 +9,17 @@
     "Default": "Data Source=HAVISHWARAN-UNV; User ID=sa;Password=12345678; Initial Catalog=StackOverflow;Integrated Security=False;Trust Server Certificate=true"
   },
   "AllowedHosts": "*",
-  "Constants": {
-    "ConnectionString": "Data Source=HAVISHWARAN-UNV; User ID=sa;Password=12345678; Initial Catalog=StackOverflow;Integrated Security=False;Trust Server Certificate=true",
-    "LoginApiTokenKey": "drUNFZEpjBXiNHcDYdjXoYi",
-    "WebKey": "9930D898BC76479A8DA7121DC3EF8599",
-    "EncryptionKey": "gVkYp3s6v9y$B&E)H@McQfTjWmZq4t7w",
-    "VectorKey": "P7Q8SATBUD",
-    "tokenAPi": "/token",
-    "firstlevelliftTime": 300
+  "ConnectionString": "Data Source=HAVISHWARAN-UNV; User ID=sa;Password=12345678; Initial Catalog=StackOverflow;Integrated Security=False;Trust Server Certificate=true",
+  "BaseTokenKey": "drUNFZEpjBXiNHcDYdjXoYi",
+  "CoreTokenKey": "drUNFZEpjBXiNHcDYdjXoYi",
+  "BaseEncryptedTokenKey": "",
+  "CoreEncryptedTokenKey": "",
+  "WebKey": "9930D898BC76479A8DA7121DC3EF8599",
+  "EncryptionKey": "gVkYp3s6v9y$B&E)H@McQfTjWmZq4t7w",
+  "VectorKey": "P7Q8SATBUD",
+  "tokenAPi": "/api/authenticate/token",
+  "firstlevelliftTime": 300,
+  "Config": {
+
   }
 }
